# dental-saas-backend

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  taxonomy.txt
alembic/: env.py
alembic/versions/: 09ac4e348f3a_add_checked_in_appointment_status.py  09bd8901c695_updated_medicalrecord.py  2fe9de521ca4_added_updated_by_in_clinicalencounter.py  347c057856ee_added_clinicalencounter_models.py  399ff69580fd_added_patient_and_medical_record_model.py  431293175c9b_updated_queue_and_appointment_to_handle_.py  487e48618006_initial_migration.py  4c9d4bdddd34_removed_finding_name_and_diagnosis_name.py  57d5f0b4070a_added_closed_by_id_for_encounter.py  5dc8ff00f7b9_added_created_by_and_updated_by_in_.py  6eed2fbb9c53_added_appointment_queue_and_procedure_.py  88c959ac54c1_updated_queue_datetime_field.py  911000fbc360_added_relationship_between_.py  964664688026_add_no_show_and_cancelled_queue_status.py  96a22985b4d8_initial_migration.py  9cb9cce4ff5e_removed_allergies_from_patient.py  9cda94581a1c_update_family_relationship_enum.py  a8aabfba3df3_updated_patientfamilylink_model.py  bc091d41b6d9_add_cancelled_status_to_queue_enum.py  be9ad00b817e_added_patientfamilylink_model_for_.py  c4a2031aaba8_removed_investigation_name.py  cf1eb78f3985_added_usersession_table.py  d60a9e406161_added_relationship_for_appointment_and_.py  d77ccdaa1d4c_added_revoked_at_field_in_usersession.py  (+1 more)
app/: main.py
app/core/: config.py  database.py  security.py
boot/: docker-run.sh
docs/: buddha_dental_api.md  er-diagram.mmd
(+75 files in other folders)
